Cleaned codes according to Sonar